docs: refresh READMEs and dev/ops/test guides against current code
Corrects drift across root README, dev/ops/test guides, and 19
subsystem READMEs (KMIP, Rust workspace, Java JCE, OpenMLS, OpenPGP,
strongSwan WASM shims). Fixes fabricated PKCS#11 attribute names
(CKA_LMS_PARAM_SET etc. don't exist), stale conformance/coverage
numbers, wrong route tables, and under/over-claimed algorithm
support, all verified against source rather than prior doc text.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>